[package]
name = "concolor-clap"
version = "0.0.9"
license = "MIT OR Apache-2.0"
description = "Clap mixin to control console colors"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[features]
default = ["auto"]
auto = ["concolor/auto", "clap/color"]
api_unstable = ["concolor/api_unstable"]

[dependencies]
concolor = { version = "^0.0.8", path = "../concolor", default-features = false }
clap = { version = "3.0.10", default-features = false, features = ["std", "derive"] }
