[package]
name = "concolor-clap"
version = "0.0.13"
license = "MIT OR Apache-2.0"
description = "Clap mixin to control console colors"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[features]
default = ["auto"]
auto = ["concolor/auto", "clap/color"]
api_unstable = ["concolor/api_unstable"]

[dependencies]
concolor = { version = "^0.0.11", path = "../concolor", default-features = false }
clap = { version = "4.0.0", default-features = false, features = ["std", "derive"] }
