[package]
name = "concolor-clap"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Clap mixin to control console colors"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2021"
rust-version = "1.67.1"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
features = ["auto", "api"]

[features]
default = ["auto"]
auto = ["concolor/auto", "clap/color"]
api = ["concolor/api"]

[dependencies]
concolor = { version = "^0.1.1", path = "../concolor", default-features = false }
clap = { version = "4.0.0", default-features = false, features = ["std", "derive"] }
