[package]
name = "concolor"
version = "0.0.9"
license = "MIT OR Apache-2.0"
description = "Control console coloring across all dependencies"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[features]
auto = ["interactive", "clicolor", "no_color", "term", "windows"]
std = []
core = ["std", "bitflags"]
# Cross-crate API control is not guaranteed until our 1.0 release
api_unstable = ["core"]
interactive = ["core", "dep:is-terminal"]
clicolor = ["core", "concolor-query"]
no_color = ["core", "concolor-query"]
term = ["core", "concolor-query"]
windows = ["core", "concolor-query/windows"]

[package.metadata.docs.rs]
features = ["auto", "api_unstable"]

[dependencies]
concolor-query = { version = "^0.1.0", path = "../query", optional = true }
bitflags = { version = "1", optional = true }
is-terminal = { version = "0.4", optional = true }
