[package]
name = "concolor"
version = "0.0.12"
license = "MIT OR Apache-2.0"
description = "Control console coloring across all dependencies"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
features = ["auto", "api"]

[features]
auto = ["interactive", "clicolor", "no_color", "term", "windows"]
std = []
core = ["std", "dep:bitflags"]
api = ["core", "dep:concolor-override"]
interactive = ["core", "dep:is-terminal"]
clicolor = ["core", "dep:concolor-query"]
no_color = ["core", "dep:concolor-query"]
term = ["core", "dep:concolor-query"]
windows = ["core", "dep:concolor-query"]

[dependencies]
concolor-override = { version = "1.0.0", path = "../override", optional = true }
concolor-query = { version = "0.1.0", path = "../query", optional = true }
bitflags = { version = "1", optional = true }
is-terminal = { version = "0.4", optional = true }
