[package]
name = "concolor-control"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Control console coloring across all dependencies"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"

[features]
auto = ["interactive", "clicolor", "no_color", "term", "windows"]
std = []
color = ["std", "bitflags"]
interactive = ["color", "atty"]
clicolor = ["color", "concolor-query"]
no_color = ["color", "concolor-query"]
term = ["color", "concolor-query"]
windows = ["color", "concolor-query/windows"]

[dependencies]
concolor-query = { version = "0.1", path = "../query", optional = true }
bitflags = { version = "1", optional = true }
atty = { version = "0.2.14", optional = true }
