[package]
name = "concolor-control"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Control console coloring across all dependencies"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"

[features]
auto = ["api", "interactive", "clicolor", "no_color", "term", "windows"]
std = []
api = ["std", "bitflags"]
interactive = ["api", "atty"]
clicolor = ["api", "concolor-query"]
no_color = ["api", "concolor-query"]
term = ["api", "concolor-query"]
windows = ["api", "concolor-query/windows"]

[package.metadata.docs.rs]
features = ["auto"]

[dependencies]
concolor-query = { version = "0.1", path = "../query", optional = true }
bitflags = { version = "1", optional = true }
atty = { version = "0.2.14", optional = true }
