[package]
name = "concolor-control"
version = "0.0.6"
license = "MIT OR Apache-2.0"
description = "Control console coloring across all dependencies"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"

[features]
auto = ["interactive", "clicolor", "no_color", "term", "windows"]
std = []
core = ["std", "bitflags"]
interactive = ["core", "atty"]
clicolor = ["core", "concolor-query"]
no_color = ["core", "concolor-query"]
term = ["core", "concolor-query"]
windows = ["core", "concolor-query/windows"]

[package.metadata.docs.rs]
features = ["auto"]

[dependencies]
concolor-query = { version = "^0.0.3", path = "../query", optional = true }
bitflags = { version = "1", optional = true }
atty = { version = "0.2.14", optional = true }
