[package]
name = "concolor-example"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Example binary for concolor"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"
publish = false

[dependencies]
structopt = "0.3"
concolor-clap = { version = "^0.0.6", path = "../clap", features = ["api_unstable"] }
# Only pulled in to dump data
concolor-control = { version = "^0.0.7", path = "../control", features = ["auto"] }
