[package]
name = "concolor-example"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Example binary for concolor"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2018"
publish = false

[dependencies]
clap = { version = "3.0", features = ["std", "derive"] }
concolor-clap = { version = "^0.0.9", path = "../clap", features = ["api_unstable"] }
# Only pulled in to dump data
concolor = { version = "^0.0.8", path = "../concolor", features = ["auto"] }
