[package]
name = "concolor-example"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Example binary for concolor"
repository = "https://github.com/rust-cli/concolor"
categories = ["command-line-interface"]
keywords = ["cli", "color", "no-std", "terminal", "ansi"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
publish = false

[dependencies]
clap = { version = "4.0.0", features = ["std", "derive"] }
concolor-clap = { version = "^0.0.12", path = "../clap", features = ["api_unstable"] }
# Only pulled in to dump data
concolor = { version = "^0.0.10", path = "../concolor", features = ["auto"] }
